Fixed a fault that caused padding to appear on the right side of the days in the Month view when only one day is visible.

--- a/src/calendar.js.scss
+++ b/src/calendar.js.scss
@@ -379,7 +379,7 @@ div.calendar {
         width: 100%;
 
         div.cell-1 {
-            width: calc( 100% - ( #{$spacing * 2} + #{$standard-border-size} ) );
+            width: 100%;
         }
 
         div.cell-2 {
